--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "^11.4.5"
+    "react-native-webview": "^11.4.5",
+    "react-textarea-autosize": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
