--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "youtube-search-app",
-    "slug": "youtube-search-app",
+    "name": "on-night",
+    "slug": "on-night",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
