--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-calendars": "^1.1262.0",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-hide-show-password-input": "^1.2.0",
+    "react-native-paper": "^4.9.1",
     "react-native-password-eye": "^1.0.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
@@ -39,7 +41,8 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2"
+    "eslint-plugin-react": "^7.23.2",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
