--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "^11.4.5",
+    "react-native-webview": "11.2.3",
     "react-textarea-autosize": "^8.3.2"
   },
   "devDependencies": {
