added custom icons

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "web": "expo start --web",
     "eject": "expo eject"
   },
+  "rnpm": { "assets": [ "assets/fonts" ] },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "0.1.10",
